--- a/views/layout.html
+++ b/views/layout.html
@@ -21,7 +21,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                            data-target="#bs-example-navbar-collapse-1">
+                            data-target="#main-menu">
                         <span class="sr-only">Toggle navigation</span>
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
@@ -29,7 +29,7 @@
                     </button>
                 </div>
 
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <div class="collapse navbar-collapse" id="main-menu">
                     <ul class="nav navbar-nav">
                         <li class="active"><a href="/">Manage Packages</a></li>
                         <li><a href="/services">Manage Services</a></li>
